# csti-support-env

./: Dockerfile  Inference.py  README.md  current_validate_output.txt  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  verify_env.py  verify_variation.py
customer_support_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
decision_env/: __init__.py  env.py  grader.py  models.py  simulation.py  tasks.py  tools.py
scratch/: test_solve_tasks.py
server/: app.py  environment.py  tasks.py
