[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csti-support-intelligence"
version = "1.0.0"
description = "A real-world OpenEnv environment for AI-driven customer support triage."
authors = [
    { name = "Naresh Prajapat", email = "prajapatnaresh266@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=2.7.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]
requires-python = ">=3.10"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["decision_env", "server"]
